# macropad_tool

./: .gitignore  80-macropad.rules  Cargo.toml  README.org  mapping-4key.ron  mapping.org  mapping.ron
src/: config.rs  consts.rs  decoder.rs  main.rs  mapping.rs  messages.rs  options.rs  parse.rs  printer.rs  reader.rs
src/keyboard/: k884x.rs  k8880.rs  k8890.rs  mod.rs
