[package]
name = "macropad-tool"
version = "0.0.1"
edition = "2021"
description = "Tool for programming macropad"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
enumset = "1.1.10"
env_logger = "0.11.8"
indoc = "2.0.6"
itertools = "0.14.0"
log = "0.4.28"
nom = "8.0.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
ron = "0.12.0"
rusb = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14.1"
serde_yaml = "0.9.34"
strum = "0.27.2"
strum_macros = "0.27.2"
