[package]
name = "macropad-tool"
version = "0.0.1"
edition = "2021"
description = "Tool for programming macropad"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
enumset = "1.1.13"
env_logger = "0.11.11"
indoc = "2.0.7"
itertools = "0.15.0"
log = "0.4.33"
nom = "8.0.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
ron = "0.12.2"
rusb = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.21.0"
serde_yaml = "0.9.34"
strum = "0.28.0"
strum_macros = "0.28.0"
